# alice-active-petersburg

./: .gitignore  Dockerfile  Procfile  docker-compose.yml  google_sheets_parser.py  lol.py  main.py  pyproject.toml  test.py
app/: app.py  lol.py  main.py  weather.py
app/db/: db.py  models.py  operations.py  schemas.py
app/utils/: config.py  gaio_parser.py  google_sheets_parser.py  gsheets_parser.py  sorter.py  weather.py  ymaps.py
