[tool.poetry]
name = "alice-active-petersburg"
version = "0.1.0"
description = ""
authors = ["Margo <slava1kvartovkin@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
fastapi = "^0.68.1"
SQLAlchemy = "^1.4.23"
uvicorn = "^0.15.0"
psycopg2-binary = "^2.9.1"
pydantic = "^1.8.2"
requests = "^2.26.0"
gspread = "^4.0.1"
oauth2client = "^4.1.3"
matplotlib = "^3.4.3"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
run = "main:start"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
